fix text align right not working on safari

--- a/app/design/frontend/Smartwave/porto/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Smartwave/porto/Magento_Catalog/web/css/source/_module.less
@@ -1781,6 +1781,7 @@ body.catalog-product-compare-index {
   }
 
   .cus-select{
+    direction: rtl;
     width: 100%;
     text-align: right;
     border: 0px;
